src/components/ui/Carousel.css
.carousel-container {
    position: relative;
    overflow: hidden;
    border: 1px solid #333;
    border-radius: 12px;
    padding: 0;
    height: 100%;
    box-sizing: border-box;
}

.carousel-track {
    display: flex;
}

.carousel-item {
    position: relative;
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    border-radius: 0;
    background-color: transparent;
    overflow: hidden;
    cursor: grab;
}

.carousel-item:active {
    cursor: grabbing;
}

.carousel-item-header {
    margin-bottom: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

.carousel-item-header img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.carousel-item-content {
    display: none;
}

.carousel-indicators-container {
    display: flex;
    width: 100%;
    justify-content: center;
}

.carousel-indicators {
    margin-top: 8px;
    display: flex;
    gap: 2px;
    justify-content: center;
    padding: 0;
}

.carousel-indicator-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
    cursor: pointer;
    border-radius: 50%;
}

.carousel-indicator {
    height: 6px;
    width: 6px;
    border-radius: 50%;
    cursor: pointer;
    transition: background-color 150ms;
}

.carousel-indicator.active {
    background-color: #B3936C;
}

.carousel-indicator.inactive {
    background-color: #444;
}

